[package]
name = "hank-tui"
version = "0.5.0"
edition = "2024"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
clap = { version = "4", features = ["derive"] }
toml = "0.8"
dirs = "5"
chrono = "0.4"
arboard = "3"
unicode-width = "0.2"
